--- a/styles.css
+++ b/styles.css
@@ -71,6 +71,10 @@ section {
     text-align: center;
 }
 
+h2 {
+    font-size: 1.5rem;
+    margin: 1;
+}
 #destinations {
     display: flex;
     justify-content: space-around;
