--- a/styles.css
+++ b/styles.css
@@ -31,17 +31,7 @@ header {
     height: auto;
     margin-right: 15px; /* Space between logo and title */
 }
-.arrow {
-    text-align: end;
-    text-align: center;
-    margin-bottom: 0; /* Ensures no margin at the bottom of the .arrow container */
-    text-align: center; /* Optional: Center the text and arrow */
 
-}
-.arrow p {
-    margin: 0; /* Removes all margins from the paragraphs */
-    padding: 0; /* Removes any padding if present */
-}
 
 h1 {
     font-size: 2.5rem;
@@ -105,6 +95,28 @@ section {
     height: auto;
 }
 
+#tours {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+#tours h2 {
+    display: block;
+    width: 100%;
+    margin-bottom: 20px; /* Adjust the spacing as needed */
+    text-align: center;  /* Center the title if desired */
+}
+
+.tour {
+    margin: 1em;
+    text-align: left;
+    max-width: 300px;
+}
+
+.tour img {
+    width: 100%;
+    height: auto;
+}
 
 form {
     max-width: 600px;
